# Bitetto-control

./: README.md
my_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controller/src/: Computed_Torque.cpp  my_controller.cpp  topic_CT.cpp  topic_PD.cpp
my_robot_urdf/: package.xml
my_robot_urdf/launch/: spawn_urdf.launch
my_robot_urdf/urdf/: model.urdf  test.urdf
test_control/: CMakeLists.txt  package.xml
test_control/config/: test_control.yaml
test_control/launch/: CT_controller.launch  PD_controller.launch
test_control/scripts/: giunti.cpp  main.py  q_joint.txt
test_gazebo/: CMakeLists.txt  package.xml
test_gazebo/launch/: test.launch
test_gazebo/test_worlds/: test.world
